--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		"yiisoft/yii2": "*",
 		"yiisoft/yii-jquery" : "*",
 		"bower-asset/fullcalendar": "4.0.2",
-		"bower-asset/fullcalendar-scheduler" : "4.0.1@stable"
+		"bower-asset/fullcalendar-scheduler" : "4.0.1@stable",
+		"bower-asset/fullcalendar": "4.0.2"
 	},
 	"require-dev": {
 		"codeception/codeception": "*"
