--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
 	"minimum-stability": "stable",
 	"require": {
 		"yiisoft/yii2": "*",
-		"bower-asset/fullcalendar": "4.0.2",
+		"bower-asset/fullcalendar": "~4.4.0",
 		"bower-asset/fullcalendar-scheduler" : "4.0.1@stable",
-		"bower-asset/fullcalendar": "4.0.2"
+		"bower-asset/moment": "4.0.2"
 	},
 	"require-dev": {
 		"codeception/codeception": "*"
