--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
 	"minimum-stability": "stable",
 	"require": {
 		"yiisoft/yii2": "*",
-		"bower-asset/fullcalendar": "~4.4.0",
-		"bower-asset/fullcalendar-scheduler" : "~4.4.0",
-		"bower-asset/moment": "*"
+		"yiisoft/yii-jquery" : "*",
+		"bower-asset/fullcalendar": "4.0.2",
+		"bower-asset/fullcalendar-scheduler" : "4.0.1@stable"
 	},
 	"require-dev": {
 		"codeception/codeception": "*"
@@ -36,6 +36,9 @@
 		  }
 		}
 	    }
+	},
+	"conflict": {
+		"bower-asset/fullcalendar": "^4.3.0"
 	},
 	"autoload": {
 		"psr-4": { "yii2fullcalendar\\": "" }
