--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
 	"minimum-stability": "stable",
 	"require": {
 		"yiisoft/yii2": "*",
-		"bower-asset/fullcalendar": "4.0.2",
-		"bower-asset/fullcalendar-scheduler" : "4.0.1@stable"
+		"bower-asset/fullcalendar": "~4.3.0",
+		"bower-asset/fullcalendar-scheduler" : "~4.3.0"
 	},
 	"require-dev": {
 		"codeception/codeception": "*"
